A bit more configuration.

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,7 +2,7 @@
 %html
   %head
     %meta{:name => "viewport", :content => "width=device-width, initial-scale=1.0"}
-    %title= content_for?(:title) ? yield(:title) : 'Gemgem - Feedback for a better world.'
+    %title= content_for?(:title) ? yield(:title) : 'Fantasia'
     %meta{:name => "description", :content => "#{content_for?(:description) ? yield(:description) : 'Rails Foundation'}"}
     = stylesheet_link_tag 'application', media: 'all'
     -# Modernizr is required for Zurb Foundation
