Finish monkeying with the top bar.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -12,10 +12,10 @@
  *
  *= require_tree .
  *= require_self
- *= require foundation_and_overrides
 
  */
 @import 'foundation-icons';
+@import "foundation_and_overrides";
 
 form.admin {
   background: #e67e22;
