--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -49,3 +49,7 @@
 //
 //@include motion-ui-transitions;
 //@include motion-ui-animations;
+
+.top-bar-right ul.menu li a.button{
+  color: #fff;
+  margin-right: 1rem; }
