--- a/app/concepts/navigation/views/show.haml
+++ b/app/concepts/navigation/views/show.haml
@@ -1,7 +1,13 @@
-%ul.menu
-  = links
--#   %li
--#     %a{:href => "#"}
--#       %i.fi-list
--#       Menu
+.top-bar
+  .top-bar-left
+    %ul.menu
+      %li.menu-text
+        Fantasia
+      %li
+        %a{:href => "#"} One
+      %li
+        %a{:href => "#"} Two
+  .top-bar-right
+    %ul.menu
+      = links
 
