--- a/app/assets/stylesheets/foundation_and_overrides.css.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.css.scss
@@ -52,4 +52,10 @@
 
 .top-bar-right ul.menu li a.button{
   color: #fff;
-  margin-right: 1rem; }
+  margin-right: 1rem;
+}
+
+form.admin {
+  background: #e67e22;
+  padding: 9px;
+}
