--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,11 +1,13 @@
 !!! 5
-%html{ :lang => "en" }
+%html{ lang: "en" }
   %head
-    %meta{ :charset => "utf-8" }
+    %meta{ charset: "utf-8" }
 
-    %meta{ :name => "viewport", :content => "width=device-width, initial-scale=1.0" }
+    %meta{ name: "viewport", content: "width=device-width, initial-scale=1.0" }
 
     %title= content_for?(:title) ? yield(:title) : "Fantasia"
+
+    = render 'favicon'
 
     = stylesheet_link_tag "application"
     = javascript_include_tag "application"
