Build out the homepage and top bar based on signed in status.

--- a/app/concepts/navigation/views/show.haml
+++ b/app/concepts/navigation/views/show.haml
@@ -3,10 +3,7 @@
     %ul.menu
       %li.menu-text
         Fantasia
-      %li
-        %a{:href => "#"} One
-      %li
-        %a{:href => "#"} Two
+      = user_menu
   .top-bar-right
     %ul.menu
       = links
