--- a/app/concepts/homepage/views/signed_in.haml
+++ b/app/concepts/homepage/views/signed_in.haml
@@ -2,4 +2,12 @@
   .row.column.text-center
     %h1
       Leagues
-    = link_to "Create League", new_league_path, class: "button"
+      = link_to "Create League", new_league_path, class: "button"
+
+    .row.small-up-1.medium-up-2.large-up-3
+      - League.popular.each do |league|
+        .column
+          .callout
+            #{league.name}
+            = #image_tag "http://placehold.it/400x370"
+            = image_tag "/assets/logos/mickey_01.svg", size: "300"
