--- a/app/views/leagues/show.html.haml
+++ b/app/views/leagues/show.html.haml
@@ -3,7 +3,7 @@
     #{@model.name}
     -# - if @league_op.policy.(:edit?)
     -#   - # TODO: test links with admin, owner, non-owner.
-    -#   = link_to "Edit", edit_league_path(@model)
+    = link_to "Edit", edit_league_path(@model)
     -# - if @league_op.policy.(:delete?)
     -#   = link_to "Delete", league_path(@model), method: :delete
 
