Add join league flow
Add operation for joining league
Add to integration test and change view to only show team when joined
Add method on user for getting a team from league

--- a/app/views/leagues/show.html.haml
+++ b/app/views/leagues/show.html.haml
@@ -11,6 +11,8 @@
 .commissioner
   Commish: #{@model.commissioner.email}
 
-.roster
-  %h3
-    Roster
+- @team = tyrant.current_user.team_for(@model)
+- if @team
+  .team
+    %h3
+      Roster
