--- a/app/views/leagues/show.html.haml
+++ b/app/views/leagues/show.html.haml
@@ -16,8 +16,6 @@
         - if team.owners.include? @model.commissioner
           (Commissioner)
 
-- @team = tyrant.current_user.team_for(@model)
-- if @team
-  .roster
-    %h3
-      Roster
+- team = tyrant.current_user.team_for(@model)
+- if team
+  = concept "team/cell", team
