Add 1 player select dropdown on edit team page

--- a/app/concepts/team/views/show.haml
+++ b/app/concepts/team/views/show.haml
@@ -4,6 +4,8 @@
     .roster
       %h3
         Roster
+        - players.each do |player|
+          #{player.name}
   - else
     = link_to "Set-up your team!", edit_team_path(model), class: "button"
 
