--- a/app/views/teams/new.html.haml
+++ b/app/views/teams/new.html.haml
@@ -1,5 +1,9 @@
 = simple_form_for @form do |f|
   = f.input :name, placeholder: "Name", label: false
+  = f.fields_for :players do |p|
+    .row
+      INDEX: #{p.index}
+      = p.input :id, label: "Player 1", collection: Player.first(10)
 
   = f.button :submit, "Save Team", class: :expand
 
