Fix select player form
Remove hidden id input because it suppressed the select input
Add populator logic for a team's player collection

--- a/app/concepts/team/views/show.haml
+++ b/app/concepts/team/views/show.haml
@@ -1,6 +1,7 @@
 - if policy.(:edit?)
   - if name.present?
     %h2 #{name}
+    = link_to "Edit", edit_team_path(model)
     .roster
       %ul
         - players.each do |player|
