Add helper method for clarity

--- a/app/concepts/team/views/show.haml
+++ b/app/concepts/team/views/show.haml
@@ -1,5 +1,5 @@
 - if policy.(:edit?)
-  - if name.present?
+  - if initialized?
     %h2 #{name}
     = link_to "Edit", edit_team_path(model)
     .roster
