Refactor league view into component cells
Add cell for summary and cell for showing teams

--- a/app/views/leagues/show.html.haml
+++ b/app/views/leagues/show.html.haml
@@ -1,22 +1,3 @@
-.header
-  %h1
-    #{@model.name}
-    - if @operation.policy.(:edit?)
-      = link_to "Edit", edit_league_path(@model)
-    - if @operation.policy.(:join?)
-      = link_to "Join", join_league_path(@model)
-    -# - if @operation.policy.(:delete?)
-    -#   = link_to "Delete", league_path(@model), method: :delete
+= concept "league/cell/summary", @model, update_operation: @operation
 
-%table.teams
-  - @model.teams.each do |team|
-    %tr{class: ("my-team" if team.owners.include?(params[:current_user]))}
-      %td
-        #{team.owners.map(&:email).join}
-        - if team.owners.include? @model.commissioner
-          (Commissioner)
-      %td
-        #{team.name}
-
-- if @team
-  = concept "team/cell", @team
+= concept "league/cell/teams", @model
