--- a/app/views/leagues/show.html.haml
+++ b/app/views/leagues/show.html.haml
@@ -1,3 +1,4 @@
-= concept "league/cell/summary", @model, update_operation: @operation
+.row.column
+  = concept "league/cell/summary", @model, update_operation: @operation
 
-= concept "league/cell/teams", @model
+  = concept "league/cell/teams", @model
