More form style upgrades

--- a/app/assets/stylesheets/foundation_and_overrides.css.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.css.scss
@@ -59,3 +59,8 @@ form.admin {
   background: #e67e22;
   padding: 9px;
 }
+
+/*.field_with_errors input:not(:focus) {
+  background-color: rgba(236, 88, 64, 0.1);
+  border-color: #ec5840;
+}*/
