--- a/app/views/leagues/new.html.haml
+++ b/app/views/leagues/new.html.haml
@@ -9,4 +9,4 @@
 
     = f.input :name, placeholder: "Name", label: false, error: false
 
-    = f.button :submit, class: "button"
+    = f.button :submit
