--- a/app/views/teams/new.html.haml
+++ b/app/views/teams/new.html.haml
@@ -11,4 +11,4 @@
         .row.columns.small-8
           = p.input :id, label: "Player #{p.index + 1}", collection: Player.first(10), required: false
 
-    = f.button :submit, "Save Team", class: "button"
+    = f.button :submit, "Save Team"
