Add concept of leagues having different rounds
Update league create form to have start time selection
Add populators to the league operation
Hacky handling of start time field for now
Add an if so tests still pass

--- a/app/views/leagues/new.html.haml
+++ b/app/views/leagues/new.html.haml
@@ -9,4 +9,8 @@
 
     = f.input :name, placeholder: "Name", label: false, error: false
 
+    %fieldset
+      = f.fields_for :rounds do |r|
+        = r.datetime_select :start_time, error: false
+
     = f.button :submit
