Use datepicker for selecting league start date
Add test helper for creating leagues

--- a/app/concepts/league/views/summary.haml
+++ b/app/concepts/league/views/summary.haml
@@ -8,6 +8,9 @@
     -# - if @operation.policy.(:delete?)
     -#   = link_to "Delete", league_path(@model), method: :delete
 
+  %h3
+    Starts: #{start_time}
+
 %table.teams
   - teams.each do |team|
     %tr{class: ("my-team" if team.owners.include?(params[:current_user]))}
