--- a/app/views/leagues/new.html.haml
+++ b/app/views/leagues/new.html.haml
@@ -11,7 +11,7 @@
 
     %fieldset
       = f.fields_for :rounds do |r|
-        = r.input :start_time, type: :text, error: false, required: false, label: "Start Time", input_html: { class: "datetime_input", value: localize(r.object.start_time, format: "%Y/%m/%d %H:%M") }
+        = r.input :start_time, type: :datetime, error: false, required: false, label: "Start Time", input_html: { class: "datetime_input", value: r.object.start_time.try(:to_time).try(:strftime, "%Y/%m/%d %H:%M") }
 
     = f.button :submit
 
