--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -15,5 +15,5 @@
  */
 
 @import 'foundation-icons';
-@import "foundation_and_overrides.css.scss";
+@import "foundation_and_overrides.scss";
 @import "jquery.datetimepicker";
