Add concept of rosters locking

--- a/app/concepts/league/views/teams.haml
+++ b/app/concepts/league/views/teams.haml
@@ -1,7 +1,3 @@
-- if rosters_locked?
-  - teams.each do |team|
-    - if true#policy(team).(:show?)
-      = concept "team/cell", team
-
-- elsif true#policy(user_team).(:edit?)
-  = concept "team/cell", user_team
+- teams.each do |team|
+  - if policy(team).(:show?)
+    = concept "team/cell", team
