--- a/app/views/leagues/new.html.haml
+++ b/app/views/leagues/new.html.haml
@@ -13,6 +13,7 @@
       = f.fields_for :rounds do |r|
         = r.input :start_time, type: :datetime, label: "Start Time",
                                error: false, required: false,
+                               readonly: !@form.start_time_writeable?,
                                input_html: { class: "datetime_input" }
 
     = f.button :submit
