--- a/app/concepts/league/views/teams.haml
+++ b/app/concepts/league/views/teams.haml
@@ -1,3 +1,5 @@
-- teams.each do |team|
-  - if policy(team).(:show?)
-    = concept "team/cell", team
+.row.small-up-1.medium-up-2.large-up-5
+  - teams.each do |team|
+    .column
+      - if policy(team).(:show?)
+        = concept "team/cell", team
